css external and javascript

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> </title>
-  <style type="text/css">
-  #num1 {
-    font-size: 50px;
-    font-color: red;
-    font-family: sans-serif;
-    background-color: blue;
-  }
-  </style>
+  <title> Playing With Matches </title>
+<link rel="stylesheet" href="styles.css">
+  <script type="text/javascript">
+  var randomNumber = function(){
+    return Math.floor(Math.random() * 9) + 1;
+  };
+var num1 = getElementById("num1");
+var randomNumber = num1;
+console.log(randomNumber);
+  </script>
+
 </head>
 <body>
   <div id="num1"> 1 </div>
