externalised JS and added new Divs and styles

--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
 
 </head>
 <body>
+<div id = "Row1">
   <div id="num1">  </div>
-  <script type="text/javascript">
-//generates a random number between 1 and 9
-  function randomNumber(){
-  return Math.floor(Math.random() * 9) + 1;
-  };
-  // Function to print to the divs
-  function divPrint(){
-    var num1 = document.getElementById('num1');
-    num1.innerHTML = randomNumber();
-  }
-// Random Number Test
-console.log(randomNumber());
-//Calling of divPrint
-divPrint();
-  </script>
+  <div id="num2"> </div>
+  <div id="num3"> </div>
+</div>
+<div id = "Row2">
+  <div id="num4">  </div>
+  <div id="num5"> </div>
+  <div id="num6"> </div>
+</div>
+<div id = "Row3">
+  <div id="num7">  </div>
+  <div id="num8"> </div>
+  <div id="num9"> </div>
+</div>
+  <script type="text/javascript" src="script.js"></script>
+
 
 </body>
 
