--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 
 </head>
 <body>
-<div id = "Row1">
+<div id = "Col1">
   <div id="num1">  </div>
   <div id="num2"> </div>
   <div id="num3"> </div>
 </div>
-<div id = "Row2">
+<div id = "Col2">
   <div id="num4">  </div>
   <div id="num5"> </div>
   <div id="num6"> </div>
 </div>
-<div id = "Row3">
+<div id = "Col3">
   <div id="num7">  </div>
   <div id="num8"> </div>
   <div id="num9"> </div>
