First Row is working!

--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
 
 </head>
 <body>
-<div id = "Col1">
-  <div id="num1">  </div>
-  <div id="num2"> </div>
-  <div id="num3"> </div>
+  <div id= "gridnumrow"> </div>
+  <div class="gridnum2"> 1 </div>
+  <div class="gridnum2"> 2 </div>
+  <div class="gridnum2"> 3 </div>
+<div id = "Row1">
+  <p class="gridnum"> A </p>
+  <div id="num1" class="numberBlock">  </div>
+  <div id="num2" class="numberBlock"> </div>
+  <div id="num3" class="numberBlock"> </div>
 </div>
-<div id = "Col2">
-  <div id="num4">  </div>
-  <div id="num5"> </div>
-  <div id="num6"> </div>
+<div id = "Row2">
+  <p class="gridnum">B</p>
+  <div id="num4" class="numberBlock">  </div>
+  <div id="num5" class="numberBlock"> </div>
+  <div id="num6" class="numberBlock"> </div>
 </div>
-<div id = "Col3">
-  <div id="num7">  </div>
-  <div id="num8"> </div>
-  <div id="num9"> </div>
+<div id = "Row3">
+  <p class="gridnum"> C </p>
+  <div id="num7" class="numberBlock">  </div>
+  <div id="num8" class="numberBlock"> </div>
+  <div id="num9" class="numberBlock"> </div>
+</div>
+<div id="MessageBox">
 </div>
   <script type="text/javascript" src="script.js"></script>
 
