--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 </div>
 <div id="MessageBox">
 </div>
-  <script type="text/javascript" src="script.js"></script>
-
-
+<button type="button" id="Refresh"> Generate </button>
+<script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
